objects/ARTestCase__c.object
<CustomObject>
    <fields>
        <fullName>ARBugCount__c</fullName>
        <label>ARBugCount</label>
        <summaryForeignKey>ARCaseBugJN__c.ARTestCase__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ARcaseDesc__c</fullName>
        <label>ARcaseDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARcaseId__c</fullName>
        <label>ARcaseId</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ARTestCase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ARTestCase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTestCases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>